Fix the frontend comment box spacing

--- a/mediacore/public/styles/comments.css
+++ b/mediacore/public/styles/comments.css
@@ -40,7 +40,7 @@
 	background: url('../images/layout/comment-bottom.png') no-repeat;
 }
 .comment-top-divot {
-	height: 30px;
+	height: 27px;
 	background: url('../images/layout/comment-top-divot.png') no-repeat bottom;
 }
 .comment-content {
@@ -120,6 +120,9 @@
 	color: red;
 }
 
+#comment-flash {
+	margin-top: 15px;
+}
 #comment-flash .success,
 #comment-flash .error {
 	background: url('../images/uploader/check.png') no-repeat left;
